--- a/HelloWorld/app/src/main/res/layout/activity_2.xml
+++ b/HelloWorld/app/src/main/res/layout/activity_2.xml
@@ -12,17 +12,24 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/Hello2"
+            android:id="@+id/Hello1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="toHello1" />
 
         <Button
-            android:id="@+id/Hello1"
+            android:id="@+id/Hello2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="toHello2" />
+
+        <Button
+            android:id="@+id/Hello3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="toHello3" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
