--- a/HelloWorld/app/src/main/res/layout/activity_3.xml
+++ b/HelloWorld/app/src/main/res/layout/activity_3.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/hello_world_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.helloworld.HelloWorldActivity">
+    tools:context=".Activity3">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,7 +31,5 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="toHello3" />
-
     </LinearLayout>
-
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
